[project]
name = "grpcio_iot"
version = "0.0.1"
authors = [
  { name="GMX" },
]
description = "gRPCio handler"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "wheel"]
